buttons changed to a element for w3 error fix, style of a and footer elements and sections altered to maintain original colour, a elements given box shadow and hero image text given shadow for readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,8 +27,17 @@ p {
  img{
      border-radius: 12px;
 }
- a:link, a:visited {
-     color: #fff;
+.btn-main {
+  background-color: #c0c0c0;
+  display: block;
+  margin: 0 auto;
+  width: 100px;
+  height: 30px;
+  border: 1pt solid #000;
+  color: #000;
+  border-radius: 12px;
+  font-weight: 700;
+  box-shadow: 3px 2px #000;
 }
 /* Navbar --------------------------------------------------- */
  .navbar {
@@ -67,11 +76,13 @@ p {
      background-size: cover;
      display: inline-block;
      color: #fff;
+      text-shadow: 2px 2px #000;
 }
  .hero-text {
      text-align: center;
      font-weight: bold;
      font-size: 42px;
+     text-shadow: 2px 2px #000;
 }
  .about-text {
      color: #000;
@@ -111,6 +122,7 @@ p {
      font-weight: 700;
      font-size: 42px;
      padding-bottom: 42px;
+      text-shadow: 2px 2px #000;
 }
  .background-image-lakes {
      background-image: url("../images/discover_images/lake.jpg");
@@ -134,6 +146,7 @@ p {
      display: inline-block;
      color: #fff;
      margin: 0 auto;
+      text-shadow: 2px 2px #000;
 }
  .background-image-adventure {
      background-image: url("../images/index_images/discover.jpg");
@@ -146,9 +159,10 @@ p {
      display: inline-block;
      color: #fff;
      margin: 0 auto;
+      text-shadow: 2px 2px #000;
 }
  .background-image-comfort {
-     background-image: url("../images/index_images/cave.jpg");
+     background-image: url("../images/index_images/cottagehawkshead.jpg");
      width: 100%;
      height: 100%;
      padding-top: 180px;
@@ -158,6 +172,7 @@ p {
      display: inline-block;
      color: #fff;
      margin: 0 auto;
+      text-shadow: 2px 2px #000;
 }
 /*-- Quiz page -- */
  .background-image-quiz {
@@ -274,6 +289,7 @@ p {
      padding: 9px;
      border: 0.7pt solid #000;
      margin: 3px;
+      box-shadow: 3px 2px #000;
 }
 .towns:hover {
     background-color: #ff2d00;
@@ -363,6 +379,9 @@ p {
  .dropdown-menu .dropdown-item {
      color: #000000;
 }
+a{
+    color: inherit;
+}
 /*------------------------------------------------------ Contact Form */
  .contact-heading{
      font-family: "Exo", sans-serif;
@@ -426,6 +445,13 @@ p {
      background: #eee;
      padding: 10px;
 }
+.quiz-submit {
+    border: 2pt solid #000;
+    margin-top: 18px;
+}
+#quiz-submit:hover {
+    background-color: #deb887;
+}
 /*------ */
  .facts {
      color: #000;
@@ -446,24 +472,6 @@ p {
      width: 95%;
      margin: 0 auto;
 }
- .arnside-text {
-     display: none;
-     padding: 5px;
-     text-align: center;
-     background-color: d3d3d3;
-     border: solid 1px #d3d3d3;
-     opacity: 0.7;
-     color: #000;
-}
- .bird-text {
-     display: none;
-     padding: 5px;
-     text-align: center;
-     background-color: #d3d3d3;
-     border: solid 1px #c3c3c3;
-     opacity: 0.7;
-     color: #000000;
-}
  .beach-text {
      display: none;
      padding: 5px;
@@ -472,15 +480,7 @@ p {
      border: solid 1px #c3c3c3;
      opacity: 0.7;
      color: #000;
-}
- .bike-text {
-     display: none;
-     padding: 5px;
-     text-align: center;
-     background-color: #d3d3d3;
-     border: solid 1px #c3c3c3;
-     opacity: 0.7;
-     color: #000000;
+      box-shadow: 3px 2px #000;
 }
  .countryroad-text {
      display:none;
@@ -490,6 +490,7 @@ p {
      border: solid 1px #c3c3c3;
      opacity: 0.7;
      color: #000;
+      box-shadow: 3px 2px #000;
 }
  .water-text {
      display:none;
@@ -499,6 +500,7 @@ p {
      border: solid 1px #c3c3c3;
      opacity: 0.7;
      color: #000;
+      box-shadow: 3px 2px #000;
 }
  .wrestling-text {
      display:none;
@@ -508,6 +510,7 @@ p {
      border: solid 1px #c3c3c3;
      opacity: 0.7;
      color: #000;
+      box-shadow: 3px 2px #000;
 }
  .spa-text {
      display:none;
@@ -517,6 +520,7 @@ p {
      border: solid 1px #c3c3c3;
      opacity: 0.7;
      color: #000000;
+      box-shadow: 3px 2px #000;
 }
  .mine-text {
      display:none;
@@ -526,6 +530,7 @@ p {
      border: solid 1px #c3c3c3;
      opacity: 0.7;
      color: #000;
+      box-shadow: 3px 2px #000;
 }
  .fair-text {
      display:none;
@@ -535,6 +540,7 @@ p {
      border: solid 1px #c3c3c3;
      opacity: 0.7;
      color: #000;
+      box-shadow: 3px 2px #000;
 }
 /*----- jquery packages gallery ---- */
 /*--- country package ----*/
